# py-simple-nsupdate

./: .env.example  .gitignore  LICENSE.md  README.md  pyproject.toml
src/simple_nsupdate/: __init__.py  _simplensupdate.py
