[build-system]
requires = ["setuptools>=61.0", "dnspython==2.7.0", "python-dotenv==1.0.1"]
build-backend = "setuptools.build_meta"

[project]
name = "py_simple_nsupdate"
version = "0.0.1"
authors = [
  { name="Samuel Coles", email="me@smurf.codes" },
]
description = "A simple way to get zone info as well as create and delete A, AAAA, CNAME, SVC, and NS record types."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = {file = "LICENSE.md"}

[project.urls]
Homepage = "https://github.com/smurf/py-simple-nsupdate"
Issues = "https://github.com/smurf/py-simple-nsupdate/issues"

[tool.setuptools.packages.find]
where = ["src"]
